Update buildozer configuration and cleanup steps

--- a/.github/workflows/apk.yml
+++ b/.github/workflows/apk.yml
@@ -47,7 +47,7 @@ jobs:
         python3 -m pip install --user buildozer "cython<3.0"
         echo "$HOME/.local/bin" >> $GITHUB_PATH
 
-    - name: 🏗️ Configurar buildozer.spec CON ESTRUCTURA ACTUAL
+    - name: 🔧 Configurar buildozer.spec CON VERSIÓN ESTABLE
       run: |
         if [ ! -f buildozer.spec ]; then
           buildozer init
@@ -59,46 +59,41 @@ jobs:
         sed -i 's/^package.domain = .*/package.domain = org.palmace/' buildozer.spec
         sed -i 's/^requirements = .*/requirements = python3,kivy==2.3.0,cython/' buildozer.spec
         
-        # 🔴 CONFIGURACIÓN CRÍTICA PARA SDK MODERNO
-        # No especificar android.sdk ni android.ndk_path - dejar que Buildozer maneje
+        # Configuración Android - API y NDK
         sed -i 's/^android.api = .*/android.api = 33/' buildozer.spec
         sed -i 's/^android.minapi = .*/android.minapi = 21/' buildozer.spec
-        
-        # Especificar NDK pero NO la ruta
+        sed -i 's/^android.sdk = .*/android.sdk = 33/' buildozer.spec
         sed -i 's/^android.ndk = .*/android.ndk = 25b/' buildozer.spec
+        sed -i 's/^android.archs = .*/android.archs = arm64-v8a, armeabi-v7a/' buildozer.spec
+        sed -i 's/#android.accept_sdk_license = False/android.accept_sdk_license = True/' buildozer.spec
         
-        # NO especificar android.sdk_path ni android.ndk_path
-        sed -i '/android.sdk_path/d' buildozer.spec
-        sed -i '/android.ndk_path/d' buildozer.spec
-        
-        # Especificar build tools version pero dejar que se instale en la estructura moderna
+        # 🔴 CRÍTICO: Fijar versión ESTABLE de build-tools (NO rc)
         if grep -q "^android.build_tools_version" buildozer.spec; then
           sed -i 's/^android.build_tools_version = .*/android.build_tools_version = 34.0.0/' buildozer.spec
         else
-          sed -i '/android.api = 33/a android.build_tools_version = 34.0.0' buildozer.spec
+          # Añadir después de android.sdk
+          sed -i '/android.sdk = 33/a android.build_tools_version = 34.0.0' buildozer.spec
         fi
         
-        sed -i 's/#android.accept_sdk_license = False/android.accept_sdk_license = True/' buildozer.spec
+        # Eliminar rutas fijas que causan conflictos
+        sed -i '/android.sdk_path/d' buildozer.spec
+        sed -i '/android.ndk_path/d' buildozer.spec
         
         echo "✅ buildozer.spec configurado:"
         grep -E "title|package|requirements|android" buildozer.spec
 
-    - name: 🧹 Limpiar posibles conflictos de estructura
+    - name: 🧹 Limpiar SDK para evitar conflictos de versión
       run: |
-        echo "🧹 Asegurando estructura moderna de SDK..."
-        # Eliminar instalaciones previas conflictivas
+        # Eliminar cualquier build-tools previo que cause problemas
         rm -rf ~/.buildozer/android/platform/android-sdk/build-tools 2>/dev/null || true
-        rm -rf ~/.buildozer/android/platform/android-sdk/tools 2>/dev/null || true
-        echo "✅ Listo"
+        echo "✅ SDK limpiado"
 
     - name: 🏗️ Compilar APK
       run: |
-        # NO forzar ANDROID_HOME manualmente - dejar que Buildozer decida
-        # Solo asegurar que el PATH incluya ~/.local/bin
         export PATH=$PATH:$HOME/.local/bin
         
         echo "🏗️ INICIANDO COMPILACIÓN (20-40 minutos)..."
-        echo "📋 Estructura moderna de SDK será gestionada por Buildozer"
+        echo "📋 Usando build-tools 34.0.0 (estable)"
         
         # Compilar
         buildozer -v android debug 2>&1 | tee build.log
@@ -120,8 +115,6 @@ jobs:
           echo "APK_FOUND=true" >> $GITHUB_ENV
         else
           echo "❌ No se encontró APK"
-          echo "📁 Contenido de ~/.buildozer/android/platform/:"
-          ls -la ~/.buildozer/android/platform/ 2>/dev/null || echo "Directorio no existe"
         fi
 
     - name: 📦 Subir APK
