--- a/.github/workflows/apk.yml
+++ b/.github/workflows/apk.yml
@@ -23,17 +23,6 @@ jobs:
       with:
         python-version: "3.11"
 
-    - name: Cache Android SDK and Buildozer
-      uses: actions/cache@v4
-      with:
-        path: |
-          ~/.buildozer
-          ~/.gradle
-          ~/.cache/pip
-        key: ${{ runner.os }}-buildozer-${{ hashFiles('buildozer.spec') }}
-        restore-keys: |
-          ${{ runner.os }}-buildozer-
-
     - name: Install system dependencies
       run: |
         sudo apt update
@@ -45,50 +34,30 @@ jobs:
     - name: Install buildozer
       run: |
         python3 -m pip install --upgrade pip
-        python3 -m pip install --user buildozer==1.5.0 "cython<3.0"
+        python3 -m pip install --user buildozer "cython<3.0"
         echo "$HOME/.local/bin" >> $GITHUB_PATH
 
-    - name: Aceptar licencias de Android SDK e instalar build-tools correctas
+    - name: Pre-configurar SDK y Licencias
       run: |
-        # Definir la ruta del SDK (la misma que usa buildozer)
-        export ANDROID_SDK_ROOT="/home/runner/.buildozer/android/platform/android-sdk"
-        export PATH="$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$PATH"
+        # Creamos la estructura que buildozer espera para no confundirlo
+        export ANDROID_HOME=$HOME/.buildozer/android/platform/android-sdk
+        mkdir -p $ANDROID_HOME/cmdline-tools/latest
         
-        echo "ANDROID_SDK_ROOT: $ANDROID_SDK_ROOT"
+        # Descargamos herramientas de linea de comandos
+        cd /tmp
+        wget -q https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
+        unzip -q commandlinetools-linux-9477386_latest.zip
+        mv cmdline-tools/* $ANDROID_HOME/cmdline-tools/latest/
         
-        # Verificar que sdkmanager existe
-        if [ ! -f "$ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager" ]; then
-          echo "sdkmanager no encontrado. Ejecutando buildozer para que descargue el SDK primero..."
-          buildozer android p4a -- --help || true
-        fi
+        # Aceptar licencias ANTES de que buildozer falle
+        yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROID_HOME --licenses
         
-        # Aceptar todas las licencias
-        if [ -f "$ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager" ]; then
-          echo "Aceptando licencias del SDK..."
-          yes | $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --licenses
-          
-          echo "Instalando build-tools 34.0.0, platform-tools y platform 33..."
-          $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager \
-            "build-tools;34.0.0" \
-            "platform-tools" \
-            "platforms;android-33"
-          
-          # Verificar que aidl se instaló
-          if [ -f "$ANDROID_SDK_ROOT/build-tools/34.0.0/aidl" ]; then
-            echo "aidl encontrado en build-tools/34.0.0"
-          else
-            echo "ERROR: aidl NO encontrado."
-            exit 1
-          fi
-        else
-          echo "sdkmanager no disponible. La instalación la hará buildozer más adelante."
-        fi
+        # Crear enlace simbolico para que buildozer encuentre el sdkmanager donde lo busca siempre
+        mkdir -p $ANDROID_HOME/tools/bin
+        ln -s $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager $ANDROID_HOME/tools/bin/sdkmanager
 
-    - name: Crear buildozer.spec definitivo
+    - name: Crear buildozer.spec
       run: |
-        echo "Creando buildozer.spec con configuración probada..."
-        
-        # Sobrescribir completamente el archivo
         cat > buildozer.spec << 'EOF'
 [app]
 title = Calculadora Matemática Pro
@@ -99,8 +68,6 @@ source.include_exts = py,png,jpg,kv,atlas,ttf
 version = 0.1
 requirements = python3,kivy==2.3.0
 orientation = portrait
-osx.python_version = 3
-osx.kivy_version = 2.3.0
 fullscreen = 0
 log_level = 2
 
@@ -115,41 +82,19 @@ ndk = 25b
 archs = arm64-v8a, armeabi-v7a
 accept_sdk_license = True
 build_tools_version = 34.0.0
-android.accept_sdk_license = True
 EOF
-        
-        echo "buildozer.spec creado:"
-        cat buildozer.spec
-        echo ""
-        echo "Verificando build_tools_version:"
-        grep "build_tools_version" buildozer.spec || echo "No encontrado"
 
     - name: Compilar APK
       run: |
-        export PATH=$PATH:$HOME/.local/bin
-        export ANDROID_SDK_ROOT="/home/runner/.buildozer/android/platform/android-sdk"
+        # Forzar el uso del SDK que configuramos arriba
+        export ANDROID_HOME=$HOME/.buildozer/android/platform/android-sdk
+        export PATH=$PATH:$ANDROID_HOME/cmdline-tools/latest/bin
         
-        echo "INICIANDO COMPILACION (20-40 minutos)..."
-        echo "Usando build-tools 34.0.0 (forzado en spec)"
+        # Ejecutar buildozer
+        buildozer -v android debug
         
-        # Mostrar version de buildozer
-        buildozer --version
-        
-        # Compilar con verbose
-        buildozer -v android debug 2>&1 | tee build.log
-        
-        # Verificar resultado
-        if [ -f bin/*.apk ]; then
-          echo "APK generado correctamente"
-          ls -la bin/
-        else
-          echo "ERROR: No se genero el APK"
-          exit 1
-        fi
-
-    - name: Subir APK como artefacto
+    - name: Subir APK
       uses: actions/upload-artifact@v4
       with:
         name: calculadora-apk
         path: bin/*.apk
-        if-no-files-found: error
